# Gurobify

./: .gitignore  BasicGurobiSolver.c  BasicGurobiSolver.cpp  CHANGES.txt  INSTALL.sh  LICENSE  Makefile.am  PackageInfo.g  README.md  autogen.sh  configure.ac  index.md  install.sh  makedoc.g  maketest.g  read.g
Gurobify/: Makefile.am  configure.ac
Gurobify(C++)/: PackageInfo.g  README.md  configure.ac  init.g  makedoc.g  read.g
Gurobify(C++)/tst/: testall.g
Gurobify/gap/: Gurobify.gd  Gurobify.gi
Gurobify/src/: Gurobify.c  Gurobify.cc
_data/: package.yml
_layouts/: default.html  default.html-e-e-e
doc/: Gurobify.bib  Gurobify.brf  Gurobify.xml  Intro.autodoc  _AutoDocMainFile.xml  _Chapter_Appendix.xml  _Chapter_Examples.xml  _Chapter_Getting_Started.xml  _Chapter_Introduction.xml  _Chapter_Using_Gurobify.xml  chap0.html  chap0.html-e  chap0.txt  chap0_mj.html  chap0_mj.html-e  chap1.html  chap1.html-e  chap1.txt  chap1_mj.html  chap1_mj.html-e  chap2.html  chap2.txt  chap2_mj.html  chap2_mj.html-e  chap3.html  chap3.html-e  chap3.txt  chap3_mj.html  chap3_mj.html-e  chap4.html  chap4.html-e  chap4.txt  chap4_mj.html  chap5.html  chap5.html-e  chap5.txt  chap5_mj.html  chap5_mj.html-e  chap6.html  chap7.html  (+12 more)
examples/: SudokuExample.g  example.g  example1.g  example1_loading.g  example2.g
gap/: Gurobify.gd  Gurobify.gi
src/: Gurobify.c
